--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ a:active {
 }
 
 body {
-    min-height: 100vh;
+    min-height: 100dvh;
     margin: 0;
     font-family: 'Nunito Sans', sans-serif;
     background-color: var(--c-bg-light);
@@ -29,7 +29,7 @@ body {
     display: flex;
     justify-content: center;
     margin-left: var(--sidebar-width);
-    min-height: 100vh;
+    min-height: 100dvh;
 }
 #content-container.dark {
     background-color: var(--c-bg-dark);
